# 2D-liquid-Delta2020

./: CMakeLists.txt  Makefile  README.md  delta.pro  diff_operators.cpp  diff_operators.h  diffeq_solvers.cpp  diffeq_solvers.h  drawer.cpp  drawer.h  grids.cpp  grids.h  logger.cpp  logger.h  main.cpp  matrix.cpp  matrix.h  matrix_3.cpp  scene.cpp  scene.h  slae_solvers.cpp  slae_solvers_2.cpp  slae_solvers_2.h  slae_solvers_3.cpp  slae_solvers_3.h
test/: pressure.txt
